--- a/index.html
+++ b/index.html
@@ -115,9 +115,25 @@
 
         /* Game Screen */
         #game-screen { width: 100vw; height: 100vh; padding: 0; }
-        #arena-container { width: 100%; height: 100%; overflow: hidden; cursor: grab; }
+        #arena-container { 
+            width: 100%; 
+            height: 100%; 
+            overflow: hidden; 
+            cursor: grab; 
+            background-color: #111;
+            background-image: radial-gradient(circle, #222 1px, transparent 1px);
+            background-size: 20px 20px;
+        }
         #arena { display: grid; gap: 1px; transform-origin: center center; }
-        .character-cell { position: relative; width: 100px; height: 100px; transition: all 0.5s ease; }
+        .character-cell { 
+            position: relative; 
+            width: 100px; 
+            height: 100px; 
+            transition: all 0.5s ease;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.5);
+            overflow: hidden;
+        }
         .character-cell img { width: 100%; height: 100%; object-fit: cover; display: block; }
         .character-name { position: absolute; bottom: 0; left: 0; right: 0; background: rgba(0, 0, 0, 0.7); color: white; padding: 4px; font-size: 12px; text-align: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
         @keyframes roulette-highlight { 0%, 100% { box-shadow: 0 0 15px 5px #fff; } 50% { box-shadow: 0 0 25px 10px var(--primary-color); } }
@@ -828,16 +844,23 @@
                 const neighbors = getValidNeighbors(attacker, gameData);
                 if (neighbors.length === 0) return;
 
-                let lastHighlight = null;
-                animationInterval = setInterval(() => {
-                    if (lastHighlight) lastHighlight.classList.remove('target-highlighted');
-                    const randomTarget = neighbors[Math.floor(Math.random() * neighbors.length)];
-                    const targetCell = arena.querySelector(`[data-index='${randomTarget.cellIndex}']`);
+                if (neighbors.length === 1) {
+                    const targetCell = arena.querySelector(`[data-index='${neighbors[0].cellIndex}']`);
                     if (targetCell) { 
                         targetCell.classList.add('target-highlighted');
-                        lastHighlight = targetCell;
                     }
-                }, 150);
+                } else {
+                    let lastHighlight = null;
+                    animationInterval = setInterval(() => {
+                        if (lastHighlight) lastHighlight.classList.remove('target-highlighted');
+                        const randomTarget = neighbors[Math.floor(Math.random() * neighbors.length)];
+                        const targetCell = arena.querySelector(`[data-index='${randomTarget.cellIndex}']`);
+                        if (targetCell) { 
+                            targetCell.classList.add('target-highlighted');
+                            lastHighlight = targetCell;
+                        }
+                    }, 150);
+                }
             }
             
             setTimeout(() => {
